src/objects/Patient_Treatment_Phase_Report__c.object
<CustomObject>
    <fields>
        <fullName>Consent_Date__c</fullName>
        <label>Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstAcTreatment__c</fullName>
        <label>FirstAcTreatment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstPaclitaxelTreatment__c</fullName>
        <label>FirstPaclitaxelTreatment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_AC_Treatment_Date__c</fullName>
        <label>First AC Treatment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Paclit_Treatment_Date__c</fullName>
        <label>First Paclit Treatment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISPY2ID__c</fullName>
        <label>ISPY2ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastAcCycle__c</fullName>
        <label>LastAcCycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastAcTreatment__c</fullName>
        <label>LastAcTreatment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastPaclitaxelCycle__c</fullName>
        <label>LastPaclitaxelCycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastPaclitaxelTreatment__c</fullName>
        <label>LastPaclitaxelTreatment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_AC_Treatment_Cycle__c</fullName>
        <label>Last AC Treatment Cycle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_AC_Treatment_Date__c</fullName>
        <label>Last AC Treatment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Paclit_Treatment_Cycle__c</fullName>
        <label>Last Paclit Treatment Cycle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Paclit_Treatment_Date__c</fullName>
        <label>Last Paclit Treatment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_To_Followup__c</fullName>
        <label>Lost To Followup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LosttoFollowup__c</fullName>
        <label>LosttoFollowup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MostRecentFollowup__c</fullName>
        <label>MostRecentFollowup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Followup__c</fullName>
        <label>Most Recent Followup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OffStudyReason__c</fullName>
        <label>OffStudyReason</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OffStudy__c</fullName>
        <label>OffStudy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Off_Study_Reason__c</fullName>
        <label>Off Study Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Request</label>
        <referenceTo>Report_Request__c</referenceTo>
        <relationshipLabel>Patient Treatment Phase Reports</relationshipLabel>
        <relationshipName>Patient_Treatment_Phase_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubjectId__c</fullName>
        <label>SubjectId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurgeryDate__c</fullName>
        <label>SurgeryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surgery_Date__c</fullName>
        <label>Surgery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TreatmentConsentDate__c</fullName>
        <label>TreatmentConsentDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrialSite__c</fullName>
        <label>TrialSite</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Site_Name__c</fullName>
        <label>Trial Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Patient Treatment Phase Report</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Treatment Phase Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>